frontend/test/should_fail/exec_014.grg
using deep_model_001;

rule r(y : Bcc) : (B) {
  hom(a,b);
  a : A;
  b : B;
  modify{
    exec((c:Bcc)=r(y));     // subtype as return var
    return (b);
  }
}
